# codenexus

./: .gitignore  .gitleaksignore  .mcp.json  CONTEXT.md  Makefile  NOTICE  README.md  progress.txt
.claude/: CLAUDE.md
.claude/rules/: architecture-dependencies.md
.gsd/graphs/: graph.json
.planning/: BETA-V1-SPEC.md  EVAL-CONTRACT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/audits/: 2026-05-02-codex-r1-raw.txt  2026-05-02-codex-r2-raw.txt  2026-05-02-codex-strategic-review.md
.planning/phases/01-foundation-design/: 01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/03.6-candle-in-process-embedder-migration-qwen3-embedding-0-6b-gg/: 03.6-01-SUMMARY.md  03.6-01-loader-and-equivalence-snapshot-PLAN.md  03.6-02-cross-corpus-eval-and-closure-PLAN.md  03.6-RESEARCH.md  03.6-SUMMARY.md  LEARNINGS.md  VERIFICATION.md
.planning/phases/codenexus-04-parity/: 04-00-PLAN.md  04-00-SUMMARY.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-FOLLOWUP-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-SUMMARY.md  04-08-SPIKE-NOTES.md  04-09-SPEC-SUPERSEDED.md  04-09-SPEC.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PRE-PLAN-NOTES.md  04-REVIEWS.md  04-SPEC.md  INTERVIEW_LOG.md
.planning/phases/codenexus-04.1-graph-clustering-and-evolution-layer/: PRE-PLAN-NOTES.md
.planning/phases/codenexus-04.5-sentrux-adaptation-layer/: 04.5-03-PRE-PLAN-NOTES.md  04.5-03-W0-PLAN.md  04.5-03-W0-SUMMARY.md  04.5-03-W1-PLAN.md  04.5-03-W2-PLAN.md  04.5-03-W3-PLAN.md  04.5-03-W4-PLAN.md  04.5-03-W5-PLAN.md  04.5-PLAN-OUTLINE.md
.planning/phases/codenexus-04.6-embedder-evaluation/: 04.6-SPEC.md
.planning/phases/codenexus-05-bridge-memory-mvp/: 05-CCG-ROUND-2-FINDINGS.md  05-DISCUSS-SUMMARY.md  05-PLAN-CHECKER-ITER-1.md  05-PRE-PLAN-NOTES.md  05-W0-PLAN.md  05-W1-PLAN.md  05-W2-PLAN.md  05-W3-PLAN.md  05-W4-PLAN.md  05-W5-PLAN.md  05-W6-PLAN.md  05-discuss-adr.md  05-discuss-api.md  05-discuss-mcp.md  05-discuss-strategic.md
.planning/probes/: drift_evidence_probe.md
.planning/probes/runs/: 2026-05-03-drift-evidence.md
.planning/quick/260427-e7r-phase-3-5b-embed-retry-fail-loud-cli-index/: 260427-e7r-PLAN.md  260427-e7r-SUMMARY.md
.planning/quick/260427-h71-req-07-go-server-scaffold-cobra-chi-mcp-/: 260427-h71-PLAN.md  260427-h71-SUMMARY.md
.planning/quick/260427-hoc-req-08-go-embed-rust-core-binary-into-go/: 260427-hoc-PLAN.md  260427-hoc-SUMMARY.md
.planning/quick/260427-i0c-req-09-go-embed-ui-bundle-vanilla-js-htm/: 260427-i0c-PLAN.md  260427-i0c-SUMMARY.md
.planning/quick/260427-j9g-req-10-closure-phase-3-mvp-precision-gat/: 260427-j9g-PLAN.md  260427-j9g-SUMMARY.md
.planning/quick/260427-nz9-phase-3-5-robustness-b10-rubric-fix-join/: 260427-nz9-PLAN.md  260427-nz9-SUMMARY.md
.planning/research/: a2a_endpoint.md  storage_backend.md
.repowise/: state.json
core/: Cargo.toml
core/src/: main.rs
docs/: ARCHITECTURE.md  embedder-offline-bootstrap.md  origin-spec.md  sentrux-pro-feature-parity.md
experiments/poc-retrieval/: .gitignore  Cargo.toml  README.md
experiments/poc-retrieval/core/: Cargo.toml
experiments/poc-retrieval/core/src/: graph_build.rs  graph_ppr.rs  lib.rs  main.rs  reranker.rs  search.rs  storage.rs  types.rs
experiments/poc-retrieval/eval/: .env.example  .gitignore  EVAL_DESIGN_NOTES.md  _minimax_v1_probe_report.md  baseline_v1_results.md  drift_compare.py  drift_evidence_probe_results.json  e2e_first_run_smoke.sh  f1_f10_handeval_candle.json  fsc_blind_queries.json  fsc_blind_results.json  graph_axis3_eval.py  nomic_embed_shadow.py  nomic_shadow_report.md  phase35_alpha_sweep.json  probe_minimax_concurrency.py  probe_minimax_concurrency_findings.md  pyproject.toml  queries.template.json  queries_fsc_f1_f10.json  r1c_probe.sh  r4b_probe.sh  r6c_two_orderings.py  r7b_llm_judge_axis3.py  r7b_llm_judge_axis3_report.md  ragas_prompts.py  ragas_spike.py  req10_alpha06.json  req10_alpha06_candle.json  req35_alpha04.json  req35_alpha05.json  req35_alpha07.json  req35_alpha08.json  rescore_alpha_sweep.py  round_2_results.md  round_3_results.md  round_4_results.md  round_5_results.json  round_5_results.md  round_5_results_run2.json  (+36 more)
experiments/poc-retrieval/eval/r4b_logs/: poll.json  submit.json
experiments/poc-retrieval/metrics/: Cargo.toml
experiments/poc-retrieval/metrics/src/: arch.rs  lib.rs  types.rs
experiments/poc-retrieval/scripts/: drift_evidence_probe.ps1  dump_drift_jsons.py  preseed-hf-cache.sh
experiments/poc-retrieval/src/: a2a.rs  embedder.rs  graph_build.rs  graph_ppr.rs  main.rs  parser.rs  search.rs  server.rs  storage.rs  task_state.rs
experiments/sentrux_diagnostics_poc/: analyzer.py  poc.py  probe.py  probe2.py
scripts/: linear_sync_decisions.py
server/: go.mod  go.sum  main.go
server/cmd/: index.go  mcp.go  query.go  root.go  serve.go
server/internal/health/: check.go
server/internal/mcpsrv/: server.go
server/internal/proxy/: a2a.go
server/internal/supervisor/: embed.go  portscan.go  rust.go  signal_unix.go  signal_windows.go
server/internal/ui/: README.md  app.js  cytoscape.min.js  embed.go  index.html  (+1 more)
ui/: README.md
