[package]
name = "poc-retrieval"
version = "0.0.1"
edition = "2021"
description = "CodeNexus retrieval-only POC. Validates whether tree-sitter + qwen3-embedding + BM25/cosine RRF clears the 60% precision gate before locking Phase 1 architecture."

[dependencies]
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ignore = "0.4"

# A2A endpoint (REQ-06) — axum HTTP server, async runtime, task state.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "matched-path"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Phase 03.6: in-process embedder via candle (replaces ollama HTTP).
# See .planning/phases/03.6-.../03.6-RESEARCH.md for stack rationale.
# fastembed first (~1-2hr cap); fall back to direct candle if config knobs inadequate.
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.5"
tokenizers = "0.22"
fastembed = { version = "5.13", features = ["qwen3"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
